# final-project-repo-group8

./: .gitignore  README.md  pyproject.toml
notebooks/: Tokenization & Word Frequency Analysis.ipynb
results/tables/: sentiment_share_by_app.csv  top50_words_by_platform.csv  top_tfidf_refined_by_platform.csv
src/Consumer_Sentiment_Comparison/: utils.py
